opam-version: "1"
package "aifad" {
  version: "2.0.2"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "--prefix" "%{prefix}%"] ["make"] ["make" "install"]]
  remove: []
  depends: ["res" "pcre-ocaml" "cfg" "menhir" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}