opam-version: "1"
package "alphaCaml" {
  version: "20061214"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make"] ["make" "install" "PREFIX=%{prefix}%"]]
  remove: [["ocamlfind" "remove" "alphaLib"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}