opam-version: "1"
package "alt-ergo" {
  version: "0.94"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "-prefix" "%{prefix}%"] ["make"] ["make" "install" "MANDIR=%{doc}%/alt-ergo"]]
  remove: []
  depends: ["ocamlgraph"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}