opam-version: "1"
package "ancient" {
  version: "0.9.0"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["ocaml" "str.cma" "unix.cma" "opam.ml" "chdir" "mmalloc" "./configure"] ["make"] ["make" "install" "DESTDIR=%{lib}%/ocamlfind"]]
  remove: [["ocamlfind" "remove" "ancient"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}