opam-version: "1"
package "ansicolor" {
  version: "0.5"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make" "OCAMLMAKEFILE=./OCamlMakefile"] ["make" "install" "OCAMLMAKEFILE=./OCamlMakefile"]]
  remove: [["ocamlfind" "remove" "ansicolor"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}