opam-version: "1"
package "archimedes" {
  version: "0.4.13"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%" "--sbindir" "%{lib}%/archimedes/sbin" "--libexecdir" "%{lib}%/archimedes/libexec" "--sysconfdir" "%{lib}%/archimedes/etc" "--sharedstatedir" "%{lib}%/archimedes/com" "--localstatedir" "%{lib}%/archimedes/var" "--datarootdir" "%{lib}%/archimedes/share"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [["ocamlfind" "remove" "archimedes"]]
  depends: ["cairo" {= "0.4.1"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}