opam-version: "1"
package "async_core" {
  version: "108.00.01"
  maintainer: "<none>"
  substs: []
  build: [["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "async_core"]]
  depends: ["sexplib" "pa_ounit" "fieldslib" "core" "bin_prot" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}