opam-version: "1"
package "async_extra" {
  version: "108.00.01"
  maintainer: "<none>"
  substs: []
  build: [["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "async_extra"]]
  depends: ["sexplib" "pipebang" "pa_ounit" "fieldslib" "core" "bin_prot" "async_core" "async_unix" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}