opam-version: "1"
package "async_unix" {
  version: "108.00.01"
  maintainer: "<none>"
  substs: []
  build: [["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "async_unix"]]
  depends: ["sexplib" "pipebang" "pa_ounit" "fieldslib" "core" "bin_prot" "async_core" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}