opam-version: "1"
package "atd" {
  version: "0"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make"] ["make" "install" "BINDIR=%{bin}%"]]
  remove: [["ocamlfind" "remove" "atd"]]
  depends: ["easy-format" "menhir" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}