opam-version: "1"
package "batteries" {
  version: "1.4.3"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{lib}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  depends: ["camomile" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}