opam-version: "1"
package "batteries" {
  version: "1.4.3"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [["ocamlfind" "remove" "estring"] ["ocamlfind" "remove" "batteries"]]
  depends: ["camomile" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}