opam-version: "1"
package "bench" {
  version: "1.3"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [["ocamlfind" "remove" "bench"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}