opam-version: "1"
package "benchmark" {
  version: "1.1"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [["ocamlfind" "remove" "benchmark"]]
  depends: ["pcre-ocaml" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}