opam-version: "1"
package "bigbro" {
  version: "2.0.4-rev3"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["ocaml" "str.cma" "unix.cma" "opam.ml" "sed" "_add_expr_" "31" "camlp4o" "camlp5o" "_add_expr_" "34" "$(CAMLP4)" "\"$(CAMLP4) -loc _loc\"" "_add_expr_" "101" "$(CAMLP4)" "\"$(CAMLP4) -loc _loc\"" "_add_expr_" "104" "cmo" "cmo -loc _loc" "Makefile"] ["ocaml" "str.cma" "unix.cma" "opam.ml" "sed" "_add_expr_" "24" "Lexing.dummy_pos, Lexing.dummy_pos" "Ploc.dummy" "pcreg.ml"] ["make"] ["make" "install" "PREFIX=%{prefix}%" "MANDIR=%{doc}%/bigbro"]]
  remove: []
  depends: ["camlp5" "pcre-ocaml" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}