opam-version: "1"

package "bin_prot" {
  version:    "108.00.02"
  maintainer: "contact@ocamlpro.com"
  build:      [
    [ "make" ]
    [ "make" "install" ]
  ]
  remove:     [ "ocamlfind" "remove" "bin_prot" ]
  depends: [
    "ocamlfind"
    "type_conv"
    "base-unix"
    "base-bigarray"
  ]
}
