opam-version: "1"

package "bin_prot" {
  version:    "108.00"
  maintainer: "contact@ocamlpro.com"
  substs:     [ "bin_prot.config" ]
  build:      [
    [ "make" ]
    [ "make" "install" ]
  ]
  remove:     [ "ocamlfind" "remove" "bin_prot" ]
  libraries:  [ "bin_prot" ]
  syntax:     [ "pa_bin_prot" ]
  depends: [
    "ocamlfind"
    "type_conv"
    "base-unix"
    "base-bigarray"
    "camlp4"
  ]
}