opam-version: "1"
package "bolt" {
  version: "1.2"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["ocaml" "str.cma" "opam.ml" "sed" "_add_expr_" "103" "test -x $(PATH_OCAML_PREFIX)/bin/" "which " "_add_expr_" "104" "test -x $(PATH_OCAML_PREFIX)/bin/" "which " "_add_expr_" "34" "$(PATH_OCAML_PREFIX)/bin/" "" "Makefile"] ["sh" "configure" "-ocaml-prefix" "%{prefix}%" "-ocamlfind" "%{bin}%/ocamlfind"] ["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "bolt"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}