opam-version: "1"
package "cache" {
  version: "1.0"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make" "all"] ["make" "opt"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "cache"]]
  depends: ["ocamlnet" "omake" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}