opam-version: "1"
package "cairo" {
  version: "0.4.1"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{lib}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  depends: ["lablgtk" {= "2.14.2-oasis8"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}