opam-version: "1"
package "cairo" {
  version: "0.4.1"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["ocaml" "str.cma" "opam.ml" "sed" "_add_expr_" "6002" "tmp" "" "_add_expr_" "6002" "flags" "tmp :: flags" "setup.ml"] ["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [["ocamlfind" "remove" "cairo2"]]
  depends: ["lablgtk" {= "2.14.2-oasis8"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}