opam-version: "1"
package "caml2html" {
  version: "1.4.1"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["mkdir" "-p" "%{bin}%"] ["make"] ["make" "lib"] ["make" "install" "PREFIX=%{prefix}%"]]
  remove: [["ocamlfind" "remove" "caml2html"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}