opam-version: "1"
package "camlbz2" {
  version: "0.6.0"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "--prefix" "%{prefix}%"] ["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "bz2"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}