opam-version: "1"
package "camlidl" {
  version: "1.05"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["ocaml" "str.cma" "unix.cma" "opam.ml" "os_type_mv" "config/Makefile.unix" "config/Makefile" "config/Makefile.win32" "config/Makefile"] ["mkdir" "-p" "%{bin}%" "%{lib}%/camlidl" "%{lib}%/camlidl/caml"] ["make" "all"] ["make" "install" "BINDIR=%{bin}%" "OCAMLLIB=%{lib}%/camlidl"]]
  remove: []
  depends: []
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}