opam-version: "1"
package "camlimages" {
  version: "v4.0.1"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["omake"] ["omake" "install"]]
  remove: [["ocamlfind" "remove" "camlimages"]]
  depends: ["omake" "lablgtk" {= "2.14.2-oasis8"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}