opam-version: "1"
package "camlp5" {
  version: "6.04"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "--prefix" "%{prefix}%" "-libdir" "%{lib}%" "-mandir" "%{doc}%"] ["make" "world.opt"] ["make" "install"]]
  remove: []
  depends: []
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}