opam-version: "1"
package "camltemplate" {
  version: "1.0.2"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "--prefix=%{lib}%/ocamlfind"] ["make"] ["make" "opt"] ["make" "-C" "src" "install"] ["make" "-C" "doc" "install" "INSTALL_DIR=%{doc}%/camltemplate"] ["make" "-C" "examples" "install" "INSTALL_DIR=%{lib}%/camltemplate/share"]]
  remove: [["ocamlfind" "remove" "camltemplate"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}