opam-version: "1"
package "camomile" {
  version: "0.8.3"
  maintainer: "<none>"
  substs: []
  build: [["./configure" "--prefix" "%{prefix}%" "--sbindir=%{lib}%/camomile/sbin" "--libexecdir=%{lib}%/camomile/libexec" "--sysconfdir=%{lib}%/camomile/etc" "--sharedstatedir=%{lib}%/camomile/com" "--localstatedir=%{lib}%/camomile/var" "--libdir=%{lib}%/camomile/lib" "--includedir=%{lib}%/camomile/include" "--datarootdir=%{lib}%/camomile/share"] ["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "camomile"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}